tests/ui/cve_2018_21000/cve_2018_21000.stderr
error: misordered parameters `len` and `cap` in `Vec::from_raw_parts`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:10:5
   |
LL |     Vec::from_raw_parts(ptr as *mut T, capacity, len)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the correct order is `Vec::from_raw_parts(ptr, len, cap)`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:10:5
   |
LL |     Vec::from_raw_parts(ptr as *mut T, capacity, len)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: misordered parameters `len` and `cap` in `Vec::from_raw_parts`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:19:5
   |
LL |     Vec::from_raw_parts(ptr as *mut u8, capacity, len)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the correct order is `Vec::from_raw_parts(ptr, len, cap)`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:19:5
   |
LL |     Vec::from_raw_parts(ptr as *mut u8, capacity, len)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

